# quickreplace

./: Cargo.toml  README.md
benches/: replace.rs
data/: ted_turner.html  uiguren.html
src/: lib.rs
